2010-05-04  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: update build files.

2010-04-30  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am: Add StandardCollectionViewGroup to the build.

2010-04-29  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Work around smcs regression #601141

2010-04-29  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am: Add an IDeferRefresh interface which is
	  implemented by the default CollectionView implementation and
	  CollectionViewSource. This allows both classes to use the
	  same machinery for their DeferRefresh calls.

	* System.Windows.mdp: Update build files

2010-04-27  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: Add the beginnings of a default
	  implementation of ICollectionView.

2010-04-26  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: Add a missing enum and a missing class.

2010-04-26  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: Stub out the missing 'Section' class.

2010-04-22  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: update build files.

2010-04-21  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.mdp: Add ToolTip.cs to the solution.

2010-04-20  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: Add new types and DPs so that the SL4
	  generated DefaultValue tests can compile.

2010-03-30  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: StylusPoint is a DO in native and a
	  struct in managed, so give it the same magic marshalling
	  treatment that Matrix gets.

2010-03-29  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.mdp: Add missing files to the solution

2010-03-26  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Remove duplicate /System.Windows.Controls/StretchDirection.cs

2010-03-24  Sebastien Pouliot  <sebastien@ximian.com>
