@@ -383,6 +383,7 @@
     <File subtype="Code" buildaction="Compile" name="System.Windows.Data/CollectionViewGroupTest.cs" />
     <File subtype="Code" buildaction="Compile" name="System.Windows.Data/CollectionViewSourceTest.cs" />
     <File subtype="Code" buildaction="Compile" name="System.Windows.Data/CollectionViewTest.cs" />
+    <File subtype="Code" buildaction="Compile" name="System.Windows.Data/BindingTest_CollectionView.cs" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
