@@ -1,3 +1,8 @@
+2010-05-05  Alan McGovern  <amcgovern@novell.com>
+
+	* Makefile.am:
+	* System.Windows.mdp: Add CollectionViewNode to the build.
+
 2010-05-04  Alan McGovern  <amcgovern@novell.com>
 
 	* Makefile.am:
